# bitsofsaturn

./: .gitignore  Dockerfile  README.md  bitsofsaturn.cabal  bot.py  cabal.project  config.json  flake.nix  package.yaml  readme.txt.txt  requirements.txt  stack.yaml  startup-script.sh
.github/workflows/: haskell.yml
app/: Bluesky.hs  Config.hs  Farcaster.hs  IPFS.hs  Main.hs  Main.hs.backup  Social.hs  Types.hs  X.hs.backup
