cabal-version:      3.0
name:               bitsofsaturn
version:            0.1.0.0
synopsis:           Raw images of Saturn taken by Cassini
description:        Bot that periodically posts Saturn images to various platforms
author:             bikem
maintainer:         bengisuozaydin@gmail.com
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall

executable bits-of-saturn
    import:           warnings
    main-is:          Main.hs
    other-modules:    Types
    build-depends:    base ^>= 4.18.0.0
                    , aeson
                    , authenticate-oauth
                    , base16-bytestring
                    , bytestring
                    , cryptonite
                    , http-client
                    , http-client-tls
                    , http-conduit
                    , http-types
                    , text
                    , time
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
