cabal-version:      3.0
name:               bitsofsaturn
version:            0.1.0.0
synopsis:           Raw images of Saturn taken by Cassini
description:        Bot that periodically posts Saturn images to various platforms
author:             bikem
maintainer:         bengisuozaydin@gmail.com
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall

executable bits-of-saturn
    import:           warnings
    main-is:          Main.hs
    other-modules:    Config
                    , IPFS
                    , Social
    build-depends:    base ^>= 4.18.0.0
                    , aeson
                    , bytestring
                    , directory
                    , filepath
                    , http-conduit
                    , random
                    , text
    hs-source-dirs:   app
    default-extensions: DeriveGeneric
                        , LambdaCase
                        , OverloadedStrings
    default-language: Haskell2010
    ghc-options:      -Wall
